# playntell

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
data/: discogs_tags_embeddings.npy
playntell/: caption_playlist.py  captions.py  config.py  eval.py  infer.py
playntell/audio_features/: README.md  extractor.py
playntell/audio_gpt/: README.md  environment.yml  requirements.txt  train_audioGPT.py
playntell/audio_gpt/data/: __init__.py  custom_datasets.py  custom_readers.py  dataset.py  encoder.py  example.py  field.py  file_utils.py  tokenization_gpt2.py  tokenization_utils.py  tokenization_utils_base.py  tokenization_utils_fast.py  utils.py  vocab.py
playntell/audio_gpt/evaluation/: __init__.py  tokenizer.py
playntell/audio_gpt/evaluation/bleu/: bleu.py  bleu_scorer.py
playntell/audio_gpt/evaluation/cider/: cider.py  cider_scorer.py
playntell/audio_gpt/evaluation/meteor/: meteor.py
playntell/audio_gpt/evaluation/rouge/: rouge.py
playntell/audio_gpt/models/: captioning_model.py  containers.py
playntell/audio_gpt/models/beam_search/: beam_search.py
playntell/audio_gpt/models/transformer/: __init__.py  attention.py  config.py  encoders.py  gpt_decoder_audioGPT.py  load_gptmodel.py  transformer_audioGPT.py  utils.py
playntell/audio_gpt/utils/: __init__.py  typing.py  utils.py
playntell/tables_and_stats/: significance_test.py  tables.py
playntell/training_experiments/: eval_playntell.py  train_playntell.py
